ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ui-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: sub1,sub2
    alb.ingress.kubernetes.io/healthcheck-path: /*
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: cert
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/actions.redirect-blueocean: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "Path": "/login", "Query": "#{query}", "StatusCode": "HTTP_301"}}'
  labels:
    app.kubernetes.io/name: jenkins-ui
  name: jenkins-ui
  namespace: jenkins
spec:
  rules:
  - host: jenkins.ryan5100.tk
    http:
      paths:
      - backend:
          service:
            name: jenkins-ui
            port:
              number: 8080
        path: /*
        pathType: ImplementationSpecific
